# EasyTerm

./: CMakeLists.txt  TODO  Terminal.pro  about_dialog.cpp  easyterm.desktop  icon.rc  macro_editor.cpp  macro_editor.h  main.cpp  resources.qrc  status_bar.cpp  status_bar.h  terminal.cpp  terminal.h
.github/workflows/: build.yml  build_and_deploy.yml  debian_packager.yml
packaging/debian/: changelog  control
src/: about_dialog.h  macro_editor.cpp  macro_editor.h  main.cpp  status_bar.cpp  status_bar.h  terminal.cpp  terminal.h
ui/: about.ui  macro.ui  terminal.ui
